# visually-impaired-assistive-wearable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
camera_calibration/: calibrate_D435i.py
config/RGBD-Inertial/: RealSense_D435i.yaml  RealSense_D435i_localization.yaml
launch/: mapping.launch.py
src/: imu_mono_realsense.cpp
